<resources>
    <string name="app_name">DOGA Breeders</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="disclaimer" translatable="false">HES-SO Valais//Wallis Sierre</string>
    <string name="impressum" translatable="false">644-1 Mobile &amp; Cloud Computing</string>
    <string name="str_welcome1">Welcome to DoGa Breeders</string>
    <string name="str_welcome2">Let\'s get you started</string>
    <string name="error_invalid_password">Invalid password</string>
    <string name="error_field_required">This field cannot be empty</string>
    <string name="error_invalid_email">Invalid login credentials</string>
    <string name="error_incorrect_password">Incorrect password</string>
    <string name="error_incorrect_phone">Incorrect phone number</string>
    <string name="error_used_email">This email is already used</string>
    <string name="error_dog_noGender">Please select a gender for this dog</string>
    <string name="error_dog_noName">Please enter a name</string>
    <string name="error_dog_noBirth">Please select a birth date for this dog</string>
    <string name="error_dog_noBreed">Please mention a breed</string>
    <string name="btn_ValidCreateAccount">Create</string>
    <string name="tv_PwdConf">Confirm password</string>
    <string name="toast_BreederCreated">New Breeder created</string>
    <string name="breeder_updated">Breeder successfully updated</string>
    <string name="pref_about_text">This application was developed by Gaétan Mottet and Doriane Papilloud as part of the assessment of the Mobile and Cloud Application course, which is an integral part of the management computer science program at the University of Applied Sciences of Western Switzerland (HES-SO) Valais-Wallis in Sierre.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="str_ProfileName">Name</string>
    <string name="str_ProfileSurname">Surname</string>
    <string name="str_Address">Address</string>
    <string name="str_Email">Email</string>
    <string name="str_Phone">Phone</string>
    <string name="btn_EditProfile">Edit Profile</string>
    <string name="btn_GoToDogsList">Go to my dogs !</string>
    <string name="str_Password">Password</string>
    <string name="str_DogName">Name</string>
    <string name="str_DogBreed">Breed</string>
    <string name="str_BirthDate">Select birthdate</string>
    <string name="str_DogMother">Mother</string>
    <string name="str_DogFather">Father</string>
    <string name="str_DogCheckFemale">Female</string>
    <string name="str_DogCheckMale">Male</string>
    <string name="str_DogPedigree">Pedigree</string>
    <string name="str_BtnAddDog">Add</string>
    <string name="str_DogDescrip">Enter additional information about your dog</string>
    <string name="str_Pedigree">Has a Pedigree</string>
    <string name="str_NoPedigree">Has no Pedigree</string>
    <string name="str_LabelPedigree">Pedigree</string>
    <string name="str_Availability">Available</string>
    <string name="msg_DogCreated">New dog successfully added</string>
    <string name="msg_DogNOTCreated">Unknown failure during dog creation. No dog added</string>
    <string name="msg_DogUpdated">Dog successfully updated</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_about">About</string>
    <string name="title_activity_list_dogs">Dogs list</string>
    <string name="action_logout">Logout</string>
    <string name="title_activity_breeder">My Profile</string>
    <string name="delete_msg">Do you really want to delete your breeder account ?</string>
    <string name="delete_msg_dog">Do you really want to delete this dog ?</string>
    <string name="action_delete">Delete</string>
    <string name="action_cancel">Cancel</string>
    <string name="str_hi_there">Hi there! Nice to see you again.</string>
    <string name="str_sign_in">Sign in</string>
    <string name="str_login">Login</string>
    <string name="logout_msg">Do you really want to logout?</string>


    <string name="language_settings_title">Language</string>
    <string name="language_en" translatable="false">English</string>
    <string name="language_fr" translatable="false">Français</string>
    <string name="str_dogGender">Gender</string>
    <string name="str_dogDateOfBirht">Date of birth</string>
    <string name="str_save">Save</string>
    <string name="str_welcome_fragment">Welcome to DoGa Breeders</string>
    <string name="str_sign_up">Sign Up</string>
    <string name="str_Password_conf">Password confirmation</string>
    <string name="dog_updated">Dog has been updated</string>
    <string name="error_used_name">A dog with this name already exists</string>
    <string-array name="pref_language_list_entries">
        <item>@string/language_en</item>
        <item>@string/language_fr</item>
    </string-array>
    <string-array name="pref_language_list_values">
        <item>en</item>
        <item>fr</item>
    </string-array>
</resources>