<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_list_dogs"
            android:icon="@drawable/ic_list_dogs_24"
            android:title="@string/title_activity_list_dogs" />
        <item
            android:id="@+id/nav_breeder_profile"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/title_activity_breeder"/>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_24dp"
            android:title="@string/title_activity_settings"/>
        <item
            android:id="@id/language_en"
            android:title="English"
            app:showAsAction="never" />
        <item
            android:id="@id/language_fr"
            android:title="Français"
            app:showAsAction="never"/>
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/action_logout"/>
        <item
            android:id="@+id/nav_none"
            android:title=""
            android:visible="false"/>
    </group>

</menu>
