<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".viewmodel.dog.AddNewDogFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <EditText
            android:id="@+id/et_name_dog"
            android:layout_width="279dp"
            android:layout_height="43dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/str_DogName"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.507"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_add_picture_dog"
            tools:ignore="MissingConstraints" />

        <ImageButton
            android:id="@+id/ib_birth"
            android:layout_width="51dp"
            android:layout_height="38dp"
            android:background="@color/white"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:src="@drawable/ic_calendar"
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.769"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="336dp" />

        <EditText
            android:id="@+id/et_mother"
            android:layout_width="128dp"
            android:layout_height="43dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/str_DogMother"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.236"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="395dp" />


        <!--        <Button-->
<!--            android:layout_width="148dp"-->
<!--            android:layout_height="150dp"-->
<!--            tools:layout_editor_absoluteX="130dp"-->
<!--            tools:layout_editor_absoluteY="469dp"-->
<!--            android:background=""-->
<!--            tools:ignore="MissingConstraints" />-->


        <EditText
            android:id="@+id/et_father"
            android:layout_width="125dp"
            android:layout_height="45dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/str_DogFather"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.772"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="395dp" />

        <Switch
            android:id="@+id/sw_pedigree"
            android:layout_width="127dp"
            android:layout_height="36dp"
            android:text="@string/str_LabelPedigree"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.686"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="449dp" />

        <EditText
            android:id="@+id/et_breed"
            android:layout_width="279dp"
            android:layout_height="43dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/str_DogBreed"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.507"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="250dp" />

        <ImageView
            android:id="@+id/iv_add_picture_dog"
            android:layout_width="300dp"
            android:layout_height="150dp"
            android:src="@drawable/addpicdog"
            tools:ignore="MissingConstraints,UsingOnClickInXml"
            tools:layout_editor_absoluteX="55dp"
            tools:layout_editor_absoluteY="30dp" />

        <TextView
            android:id="@+id/et_birth"
            android:layout_width="210dp"
            android:layout_height="40dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/str_BirthDate"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:textSize="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.333"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.484"
            tools:ignore="MissingConstraints" />

        <RadioGroup
            android:id="@+id/rbg_FemaleMaleRadioBtnGroup"
            android:layout_width="105dp"
            android:layout_height="72dp"
            tools:layout_editor_absoluteX="67dp"
            tools:layout_editor_absoluteY="449dp"
            tools:ignore="MissingConstraints">

            <RadioButton
                android:id="@+id/rb_DogFemale"
                android:layout_width="91dp"
                android:layout_height="35dp"
                android:text="@string/str_DogCheckFemale"
                tools:layout_editor_absoluteX="55dp"
                tools:layout_editor_absoluteY="475dp" />

            <RadioButton
                android:id="@+id/rb_DogMale"
                android:layout_width="92dp"
                android:layout_height="34dp"
                android:text="@string/str_DogCheckMale" />
        </RadioGroup>

        <EditText
            android:id="@+id/et_DogDescription"
            android:width="@dimen/wrap_content"
            android:layout_width="wrap_content"
            android:minWidth="280dp"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            android:maxHeight="100dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/str_DogDescrip"
            android:inputType="textMultiLine"
            tools:layout_editor_absoluteX="67dp"
            tools:layout_editor_absoluteY="536dp"
            tools:ignore="MissingConstraints"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_CreateBreeder"
            android:layout_width="197dp"
            android:layout_height="46dp"
            android:background="@drawable/button_background"
            android:text="@string/str_BtnAddDog"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="107dp"
            tools:layout_editor_absoluteY="646dp" />

        <TextView
            android:id="@+id/tv_PedigreeInfo"
            android:layout_width="137dp"
            android:layout_height="21dp"
            android:editable="true"
            android:text="@string/str_NoPedigree"
            android:textAlignment="center"
            android:textColor="@color/myColor"
            app:layout_constraintTop_toBottomOf="@+id/sw_pedigree"
            tools:layout_editor_absoluteX="191dp"
            tools:ignore="MissingConstraints"/>

        <CheckBox
            android:id="@+id/cb_availability"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_Availability"
            tools:layout_editor_absoluteX="285dp"
            tools:layout_editor_absoluteY="123dp"
            tools:ignore="MissingConstraints"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>